unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/CMPL123TMS__Quiz_Item__c.object-meta.xml
<CustomObject>
    <description>Quiz Items</description>
    <label>Quiz Item</label>
    <nameField>
        <displayFormat>QI-{0000}</displayFormat>
        <label>Quiz Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>