unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>