unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Options__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Options__c</fullName>
        <description>Option available for Question</description>
        <label>Options</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>