unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Questions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>