unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Quiz_Item_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_Item_No__c</fullName>
        <label>Quiz Item Number</label>
        <type>TextArea</type>
    </CustomField>