unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Quiz_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_No__c</fullName>
        <label>Quiz Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>