unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Quiz_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quiz</label>
        <referenceTo>CMPL123TMS__Quiz__c</referenceTo>
        <relationshipLabel>Quiz Items</relationshipLabel>
        <relationshipName>Quiz_Items1</relationshipName>
        <type>Lookup</type>
    </CustomField>