unpackaged/main/default/objects/CMPL123TMS__Quiz_Item__c/fields/CMPL123TMS__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </CustomField>